# soar-to-ros_interface

./: CMakeLists.txt  README.md  mainpage.dox  mainpage.dox~  manifest.xml~  marker_detection.cpp  package.xml
launch/: conn.launch~  conn3.launch~  conn4 (copy).launch~  conn4.launch~  ros_drone.launch~  soar_ros.launch  soar_test.launch~  soar_test_video.launch~  video.launch~  video_key.launch~
src/: conn.py~  drone_controller.py~  drone_status.py~  drone_video_display.py~  interface_execution.py  keyboard_controller.py  markers.py  ros_drone.py  soar.py~  soar_test.py~  video_display.py
